Fix:#3 - add react for lanaguage option in esling config and apply eslint for other files

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm run format:check
 
       - name: jest test
-        run: npm test
+        run: npm test -- --passWithNoTests
 
       - name: build project
         run: npm run build
