Fix:#3 - correct typo in frontend-ci.yml

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -43,4 +43,4 @@ jobs:
         run: npm run build
 
       - name: build storybook
-        run: npm run build storybook
+        run: npm run build-storybook
