--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build-storybook": "storybook build",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:vitest": "vitest"
+    "test:vitest": "vitest",
+    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.81.5",
@@ -50,6 +51,7 @@
     "@typescript-eslint/parser": "^8.36.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "chromatic": "^13.1.2",
     "eslint": "^9.30.1",
     "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "^10.1.5",
