Fix:#5 - change condition of cleanup

--- a/.github/workflows/branch-cleanup.yml
+++ b/.github/workflows/branch-cleanup.yml
@@ -7,9 +7,11 @@ on:
 
 jobs:
   cleanup:
-    if: github.event.pull_request.merged == true
+    if: |
+      github.event.pull_request.merged == true &&
+      github.event.pull_request.head.ref != 'main' && 
+      github.event.pull_request.head.ref != 'develop'
     runs-on: ubuntu-latest
-
     steps:
       - name: delete branch after merge
         uses: dawidd6/action-delete-branch@v3
