--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.2",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
