--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/addon-onboarding": "^9.0.15",
     "@storybook/addon-vitest": "^9.0.15",
     "@storybook/nextjs-vite": "^9.0.15",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
