--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,8 @@
   "printWidth": 100,
   "arrowParens": "avoid",
   "bracketSpacing": true,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindFunctions": ["clsx", "cn", "cva"]
 }
