--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "jest-environment-jsdom": "^30.0.4",
     "playwright": "^1.53.2",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "^9.0.15",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.0",
