--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@next/eslint-plugin-next": "^15.3.5",
     "@storybook/addon-a11y": "^9.0.15",
     "@storybook/addon-docs": "^9.0.15",
-    "@storybook/addon-onboarding": "^9.0.15",
     "@storybook/addon-vitest": "^9.0.15",
     "@storybook/nextjs-vite": "^9.0.15",
     "@svgr/webpack": "^8.1.0",
@@ -74,6 +73,7 @@
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.2.4"
   }
 }
