--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@storybook/nextjs": "^9.0.17",
     "@tanstack/react-query": "^5.81.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.525.0",
+    "dayjs": "^1.11.13",
     "msw": "^2.10.4",
     "next": "15.3.5",
     "react": "^19.0.0",
