--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@storybook/addon-a11y": "^9.0.15",
     "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-vitest": "^9.0.15",
+    "@storybook/nextjs": "^9.0.17",
     "@storybook/nextjs-vite": "^9.0.15",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
