Fix:#161 - correnct typo

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
             git pull origin main
             npm install
 
-            echo "${{ secrets.ENV_PRODUCTION }}" > .env.production
+            echo "${{ secrets.ENV_PRODUCTION }}" > .env
 
             if [ ! -f /swapfile ]; then
               sudo fallocate -l 2G /swapfile
