--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@storybook/nextjs": "^9.0.17",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.81.5",
+    "@tiptap/extension-highlight": "^3.0.9",
+    "@tiptap/extension-placeholder": "^3.0.9",
+    "@tiptap/extension-text-align": "^3.0.9",
+    "@tiptap/react": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
+    "@upstash/redis": "^1.35.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
