--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.1",
     "msw": "^2.10.4",
     "next": "15.3.5",
     "pretendard": "^1.3.9",
