--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pretendard": "^1.3.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.60.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.23.8",
