--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/extension-text-align": "^3.0.9",
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
+    "@types/sanitize-html": "^2.16.0",
     "@upstash/redis": "^1.35.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,6 +43,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.60.0",
+    "sanitize-html": "^2.17.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.6"
